# matroid-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
calculated_matroids/: vamos_derived.matroid
examples/: betti_numbers.rs  generalized_hamming_distance_for_vamos.rs  hamming_code_elements.rs  non_fast_matroid.rs  small_non_fast_matroid.rs  vamos_derived.rs  vamos_derived_calculation.rs
src/: betti_nums.rs  field.rs  lib.rs  matrix.rs  set.rs  utils.rs
src/matroid/: bases_matroid.rs  combinatorial_derived.rs  dual.rs  elongate.rs  examples.rs  matrix_matroid.rs  matroid.rs  mod.rs  storage.rs  uniform.rs  vamos.rs
