[package]
name = "matroids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

progress = [ "indicatif" ]
default = [ ]

[dependencies]

tinyfield = "0.1"
rayon = "1.5"

postcard = { version = "1.0", features = [ "alloc" ] }
serde = "1.0"

num-integer = "0.1"
num-bigint = "0.4"
num-traits = "0.2"

dashmap = "5.4"

log = "0.4"
simple_logger = "4.1"

indicatif = { version = "0.17", optional = true }

[dev-dependencies]
uuid = { version = "1.1", features = [ "v4" ] }
